[package]
name = "proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
tokio-stream = "0.1.17"
futures-util = "0.3.31"
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5"
urlencoding = "2.1"
dotenvy = "0.15"


